mudar o span amanha

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 span{
     display: flex;
     flex-wrap: wrap;
@@ -19,12 +21,17 @@ header{
     background-color:brown;
 }
 
-h1{
-    background-color:lightcoral;
+.header__title--red{
+    background-color:red;
     color: black;
+    border: solid 2px black;
+    font-family: "inter", sans-serif;
 }
 
 .header__title--blue{
     background-color:blue;
-    color:white
+    color:white;
+    border: solid 2px black;
+    font-family: "inter", sans-serif;
 }
+
